--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,41 @@
+amqp==5.0.9
 asgiref==3.5.0
+billiard==3.6.4.0
+celery==5.2.3
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
+click==8.0.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+colorama==0.4.4
 cryptography==36.0.1
 defusedxml==0.7.1
+Deprecated==1.2.13
 Django==4.0.1
 django-allauth==0.48.0
 django-jazzmin==2.4.9
 idna==3.3
+kombu==5.2.3
 oauthlib==3.2.0
+packaging==21.3
 Pillow==9.0.0
+prompt-toolkit==3.0.28
 psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
+pyparsing==3.0.7
 python3-openid==3.2.0
+pytz==2021.3
+redis==4.1.4
 requests==2.27.1
 requests-oauthlib==1.3.1
+six==1.16.0
 sorl-thumbnail==12.7.0
 sqlparse==0.4.2
 tzdata==2021.5
 urllib3==1.26.8
+vine==5.0.0
+wcwidth==0.2.5
+wrapt==1.13.3
