--- a/requirements.txt
+++ b/requirements.txt
@@ -16,16 +16,20 @@ Deprecated==1.2.13
 Django==4.0.1
 django-allauth==0.48.0
 django-jazzmin==2.4.9
+flower==1.0.0
+humanize==4.0.0
 idna==3.3
 kombu==5.2.3
 oauthlib==3.2.0
 packaging==21.3
 Pillow==9.0.0
+prometheus-client==0.13.1
 prompt-toolkit==3.0.28
 psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 pyparsing==3.0.7
+python-dotenv==0.19.2
 python3-openid==3.2.0
 pytz==2021.3
 redis==4.1.4
@@ -34,10 +38,9 @@ requests-oauthlib==1.3.1
 six==1.16.0
 sorl-thumbnail==12.7.0
 sqlparse==0.4.2
+tornado==6.1
 tzdata==2021.5
 urllib3==1.26.8
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.13.3
-
-python-dotenv~=0.19.2
