--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ defusedxml==0.7.1
 Deprecated==1.2.13
 Django==4.0.1
 django-allauth==0.48.0
+django-celery-results==2.2.0
 django-jazzmin==2.4.9
 flower==1.0.0
 humanize==4.0.0
